docs: create user api docs
